[gd_scene load_steps=10 format=3 uid="uid://bumw4uqjq4m4h"]

[ext_resource type="Script" path="res://Game Assets/Stages/Worlds/world.gd" id="1_qmc3l"]
[ext_resource type="TileSet" uid="uid://c7w5nqswgnt8y" path="res://Game Assets/Stages/Building Blocks/tile_solid.tres" id="2_dj23m"]
[ext_resource type="PackedScene" uid="uid://dqa4spgy6njg4" path="res://Game Assets/Player/player.tscn" id="2_ml2er"]
[ext_resource type="Material" uid="uid://bnde77n4va8i6" path="res://Game Assets/Stages/Building Blocks/tile_water.tres" id="3_n2d8q"]
[ext_resource type="Texture2D" uid="uid://dwoe51w5if526" path="res://Game Assets/Stages/Building Blocks/Tile_Water.png" id="4_yc2ga"]
[ext_resource type="PackedScene" uid="uid://ds3s3jr8ty5vv" path="res://Game Assets/Stages/Building Blocks/start_pos.tscn" id="5_y2y8d"]
[ext_resource type="PackedScene" uid="uid://dvr48cjreu7we" path="res://Game Assets/Player/fairy.tscn" id="6_5kt1c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h28od"]
texture = ExtResource("4_yc2ga")
0:0/0 = 0
0:0/0/material = ExtResource("3_n2d8q")
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -7, 8, -7, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/material = ExtResource("3_n2d8q")
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_0yvhc"]
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_h28od")

[node name="World" type="Node2D"]
script = ExtResource("1_qmc3l")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Tile_Solid" type="TileMap" parent="."]
z_index = 2
tile_set = ExtResource("2_dj23m")
format = 2
layer_0/name = "Solid"
layer_0/tile_data = PackedInt32Array(-1, 786432, 1, -65536, 393216, 2, -65535, 393216, 2, -65534, 393216, 2, -65533, 393216, 2, -65532, 393216, 2, -65531, 393216, 2, -65530, 393216, 2, -65529, 393216, 2, -65528, 393216, 2, -65527, 393216, 2, -65526, 393216, 2, -65525, 393216, 2, 12, 0, 2, 13, 0, 2, 14, 0, 2, 15, 0, 2, 16, 0, 2, 17, 0, 2, 18, 0, 2, 19, 0, 2, -65517, 393216, 2, 11, 0, 2, 10, 0, 2, -65524, 393216, 2, -65523, 393216, 2, -65522, 393216, 2, -65521, 393216, 2, -65520, 393216, 2, -65519, 393216, 2, -65518, 393216, 2, -65516, 393216, 2, -65515, 393216, 2, -65514, 393216, 2, -65513, 393216, 2, -65512, 393216, 2, -65511, 393216, 2, -65510, 393216, 2, -65509, 393216, 2, -65508, 393216, 2, -65507, 393216, 2, -65506, 393216, 2, -65505, 393216, 2, -65504, 393216, 2, -65503, 393216, 2, -65502, 393216, 2, -65501, 393216, 2, -65500, 393216, 2, -65499, 393216, 2, -65498, 393216, 2, -65497, 393216, 2, -65496, 524288, 1, 40, 131072, 2, 39, 720896, 2, 38, 0, 2, 37, 0, 2, 36, 0, 2, 35, 0, 2, 34, 0, 2, 33, 0, 2, 32, 0, 2, 31, 0, 2, 30, 0, 2, 29, 0, 2, 28, 0, 2, 27, 0, 2, 26, 0, 2, 25, 0, 2, 24, 0, 2, 23, 0, 2, 22, 0, 2, 21, 0, 2, 20, 0, 2, 9, 0, 2, 8, 0, 2, 7, 0, 2, 6, 0, 2, 5, 0, 2, 4, 0, 2, 3, 0, 2, 2, 0, 2, 1, 0, 2, 0, 655360, 2, 65535, 262144, 2, 131071, 262144, 2, 196607, 262144, 2, 262143, 262144, 2, 327679, 262144, 2, 262144, 131072, 2, 196608, 131072, 2, 131072, 131072, 2, 65536, 131072, 2, 327680, 131072, 2, 393216, 131072, 2, 458752, 131072, 2, 524288, 131072, 2, 524287, 262144, 2, 458751, 262144, 2, 393215, 262144, 2, 589823, 262144, 2, 655359, 262144, 2, 589824, 131072, 2, 655360, 131072, 2, 720896, 131072, 2, 786432, 131072, 2, 851968, 131072, 2, 917504, 131072, 2, 983039, 262144, 2, 917503, 262144, 2, 851967, 262144, 2, 786431, 262144, 2, 720895, 262144, 2, 983040, 131072, 2, 1048576, 131072, 2, 1114112, 131072, 2, 1179648, 131072, 2, 1245183, 262144, 2, 1179647, 262144, 2, 1114111, 262144, 2, 1048575, 262144, 2, 1310719, 262144, 2, 1376255, 262144, 2, 1441792, 917504, 2, 1376256, 851968, 2, 1310720, 131072, 2, 1245184, 131072, 2, 1441791, 262144, 2, 1507327, 262144, 2, 1441793, 917504, 2, 1441794, 917504, 2, 1376258, 393216, 2, 1376257, 393216, 2, 1376259, 393216, 2, 1376260, 393216, 2, 1376261, 393216, 2, 1376262, 393216, 2, 1376263, 393216, 2, 1376264, 393216, 2, 1376265, 393216, 2, 1376266, 393216, 2, 1376267, 393216, 2, 1376268, 393216, 2, 1376269, 393216, 2, 1376270, 393216, 2, 1376271, 393216, 2, 1376272, 393216, 2, 1376273, 393216, 2, 1376274, 393216, 2, 1376275, 393216, 2, 1376276, 393216, 2, 1376277, 393216, 2, 1376278, 393216, 2, 1376279, 393216, 2, 1376280, 393216, 2, 1376281, 393216, 2, 1376282, 393216, 2, 1376283, 393216, 2, 1376284, 393216, 2, 1376285, 393216, 2, 1376286, 393216, 2, 1376287, 393216, 2, 1376288, 786432, 2, 1376289, 851968, 2, 1376290, 393216, 2, 1376291, 393216, 2, 1376292, 393216, 2, 1376293, 393216, 2, 1376294, 393216, 2, 1376295, 786432, 2, 1376296, 131072, 2, 1441832, 131072, 2, 1441831, 917504, 2, 1441830, 917504, 2, 1441829, 917504, 2, 1441828, 917504, 2, 1441827, 917504, 2, 1441826, 917504, 2, 1441825, 917504, 2, 1441824, 917504, 2, 1441823, 917504, 2, 1441822, 917504, 2, 1441821, 917504, 2, 1441820, 917504, 2, 1441819, 917504, 2, 1441818, 917504, 2, 1441817, 917504, 2, 1441816, 917504, 2, 1441815, 917504, 2, 1441814, 917504, 2, 1441813, 917504, 2, 1441812, 917504, 2, 1441811, 917504, 2, 1441810, 917504, 2, 1441809, 917504, 2, 1441808, 917504, 2, 1441807, 917504, 2, 1441806, 917504, 2, 1441805, 917504, 2, 1441804, 917504, 2, 1441803, 917504, 2, 1441802, 917504, 2, 1441801, 917504, 2, 1441800, 917504, 2, 1441799, 917504, 2, 1441798, 917504, 2, 1441797, 917504, 2, 1441796, 917504, 2, 1441795, 917504, 2, 1507367, 0, 2, 1507368, 262144, 1, 1507366, 0, 2, 1507365, 0, 2, 1507364, 0, 2, 1507363, 0, 2, 1507362, 0, 2, 1507361, 0, 2, 1507360, 0, 2, 1507359, 0, 2, 1507358, 0, 2, 1507357, 0, 2, 1507356, 0, 2, 1507355, 0, 2, 1507354, 0, 2, 1507353, 0, 2, 1507352, 0, 2, 1507351, 0, 2, 1507350, 0, 2, 1507349, 0, 2, 1507348, 0, 2, 1507347, 0, 2, 1507341, 0, 2, 1507342, 0, 2, 1507343, 0, 2, 1507344, 0, 2, 1507345, 0, 2, 1507346, 0, 2, 1507340, 0, 2, 1507339, 0, 2, 1507338, 0, 2, 1507337, 0, 2, 1507336, 0, 2, 1507335, 0, 2, 1507334, 0, 2, 1507333, 0, 2, 1507332, 0, 2, 1507331, 0, 2, 1507330, 0, 2, 1507329, 0, 2, 1507328, 0, 2, 1572863, 0, 1, 1310759, 262144, 2, 1245223, 262144, 2, 1179687, 262144, 2, 1114151, 262144, 2, 1179688, 131072, 2, 1245224, 131072, 2, 1310760, 131072, 2, 65576, 131072, 2, 131112, 131072, 2, 196648, 131072, 2, 1114152, 131072, 2, 1048616, 131072, 2, 983080, 131072, 2, 917544, 131072, 2, 852008, 131072, 2, 786472, 131072, 2, 720936, 131072, 2, 655400, 131072, 2, 589864, 131072, 2, 524328, 131072, 2, 458792, 131072, 2, 393256, 131072, 2, 327720, 131072, 2, 262184, 131072, 2, 65575, 262144, 2, 131111, 262144, 2, 196647, 262144, 2, 262183, 262144, 2, 327719, 262144, 2, 393255, 262144, 2, 458791, 262144, 2, 524327, 262144, 2, 589863, 262144, 2, 655399, 262144, 2, 720935, 262144, 2, 786471, 262144, 2, 852007, 262144, 2, 917543, 262144, 2, 1048615, 262144, 2, 983079, 262144, 2, 1310753, 131072, 2, 1245217, 131072, 2, 1179681, 524288, 1, 1179680, 786432, 1, 1245216, 262144, 2, 1310752, 262144, 2)
layer_1/name = "Background"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -8
layer_1/tile_data = PackedInt32Array(1376256, 1048576, 1, 1376257, 1048576, 2, 1376258, 1048576, 2, 1376259, 1048576, 2, 1376260, 1048576, 2, 1376261, 1310720, 1, 1310725, 1179648, 2, 1245189, 1179648, 2, 1179653, 1179648, 2, 1114117, 1572864, 1, 1114116, 1441792, 2, 1114115, 1441792, 2, 1114114, 1441792, 2, 1114113, 1441792, 2, 1114112, 1835008, 1, 1179648, 1310720, 2, 1245184, 1310720, 2, 1245185, 1966080, 2, 1310721, 1966080, 2, 1310720, 1310720, 2, 1179649, 1966080, 2, 1310722, 1966080, 2, 1245186, 1966080, 2, 1179650, 1966080, 2, 1179651, 1966080, 2, 1245188, 1966080, 2, 1310724, 1966080, 2, 1310723, 1966080, 2, 1179652, 1966080, 2, 1245187, 1966080, 2)

[node name="Tile_Water" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("TileSet_0yvhc")
format = 2
layer_0/tile_data = PackedInt32Array(1310758, 0, 1, 1310757, 0, 1, 1310756, 0, 1, 1310755, 0, 1, 1310754, 0, 1, 1245218, 0, 1, 1245219, 0, 1, 1245220, 0, 1, 1245221, 0, 1, 1245222, 0, 1, 1179686, 0, 0, 1179685, 0, 0, 1179684, 0, 0, 1179683, 0, 0, 1179682, 0, 0)

[node name="Player" parent="." groups=["Player"] instance=ExtResource("2_ml2er")]
position = Vector2(64, 312)

[node name="Camera_Dragger" type="Marker2D" parent="Player"]
position = Vector2(0, -64)

[node name="Player_Camera" type="Camera2D" parent="Player/Camera_Dragger"]
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 360
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_limits = true

[node name="Fairy" parent="." instance=ExtResource("6_5kt1c")]
position = Vector2(48, 288)
collision_mask = 0

[node name="Decorations" type="Node2D" parent="."]

[node name="Warps" type="Node2D" parent="."]

[node name="Start_Pos" type="Node2D" parent="."]

[node name="Start_Pos_0" parent="Start_Pos" instance=ExtResource("5_y2y8d")]
position = Vector2(64, 312)

[node name="Interactibles" type="Node2D" parent="."]
z_index = -2

[node name="Enemies" type="Node2D" parent="."]
